# council-v3

./: .gitignore  BROKEN_STATE.md  CLAUDE-RESEARCH.md  CLAUDE.md  HANDOFF_2026-01-25.md  LEARNINGS.md  LOG.md  NOTIFICATION_AUDIT_NOTES.md  QUIRKS.md  README.md  REFLECTIONS.md  STATE.md  TEST_CHECKLIST.md  pyproject.toml
.claude/: settings.json
.council/: framework  invariants.yaml
config/: config.yaml.example
council/: __init__.py  bootstrap.py  cli.py  client.py  council.py
docs/: ARCHITECTURE.md  FEATURES.md  MVP_BUILD.md  OPERATING_GUIDE.md  PRODUCTION_SYSTEM.md  SANDBOX_TO_SCALE.md  SHOWCASE_DEMO.md  SYSTEM_ARCHITECTURE.md  SYSTEM_AUDIT.md  SYSTEM_REFERENCE.md  architecture.html  coordination.html  demo.html  full-system-walkthrough.html  inputs.html  overview.html  planning.html  tier3-walkthrough.html
hooks/: auto-inject.sh  check_invariants.sh  critical.sh  framework.sh  global.sh  inject.sh  notify-rich.sh  poc.sh  production.sh  strict_backup.sh  strict_v2.sh
quality-pack/: README.md  TESTING_PLAN.md  install.sh
sandbox/: calculator.py  test_calculator.py
scripts/: agent-ab-test.sh  audit_done.py  check_invariants.py  e2e_test.sh  pre_test_audit.sh  run_codeflow_ab_test.py  send_command.sh  sim-cleanup.sh  sim-setup.sh  sim-test.sh  start-council.sh  stop-council.sh
specs/: agent1-rich-notifications.md  agent2-ralph-integration.md  v1-agent1-notifications.md  v1-agent2-ralph.md
tests/: conftest.py  test_audit_done.py  test_circuit_breaker.py  test_command_parsing.py  test_config_validation.py  test_dry_run.py  test_enforcement_integration.py  (+9 more)
(+129 files in other folders)
